coffee.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: coffee
  labels:
    app: coffee 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: yunsangjun/demo-coffee
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
