tea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea
  namespace: '${ parameters.namespace }'
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: tea
